[gd_scene load_steps=34 format=3 uid="uid://chfkgjekcn8xw"]

[ext_resource type="Script" path="res://paint_char.gd" id="1_67w2d"]
[ext_resource type="Texture2D" uid="uid://cmxi5rfur61y8" path="res://buck.png" id="1_jv3dw"]
[ext_resource type="Texture2D" uid="uid://begqfgpwo4542" path="res://d_buck.png" id="2_r71qc"]
[ext_resource type="Texture2D" uid="uid://ejf286tpseiw" path="res://d_buck_ev.png" id="3_5isah"]
[ext_resource type="Script" path="res://One_way_collision.gd" id="3_fva2p"]
[ext_resource type="Texture2D" uid="uid://c8ftsnr8538fr" path="res://flowa.png" id="6_35y2f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2vrp1"]
atlas = ExtResource("2_r71qc")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y256"]
atlas = ExtResource("2_r71qc")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjv0a"]
atlas = ExtResource("2_r71qc")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlbhs"]
atlas = ExtResource("2_r71qc")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lffh"]
atlas = ExtResource("2_r71qc")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1fd1"]
atlas = ExtResource("2_r71qc")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_etth0"]
atlas = ExtResource("2_r71qc")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_msnqw"]
atlas = ExtResource("3_5isah")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6aeu"]
atlas = ExtResource("3_5isah")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0nw7"]
atlas = ExtResource("3_5isah")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n7be"]
atlas = ExtResource("3_5isah")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5ite"]
atlas = ExtResource("3_5isah")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4fuu"]
atlas = ExtResource("3_5isah")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c70xu"]
atlas = ExtResource("3_5isah")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj2pr"]
atlas = ExtResource("3_5isah")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nlmh"]
atlas = ExtResource("1_jv3dw")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wquat"]
atlas = ExtResource("1_jv3dw")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bawbl"]
atlas = ExtResource("1_jv3dw")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7y1i"]
atlas = ExtResource("1_jv3dw")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqjoi"]
atlas = ExtResource("1_jv3dw")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_opq03"]
atlas = ExtResource("1_jv3dw")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj82g"]
atlas = ExtResource("1_jv3dw")
region = Rect2(0, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_j5yrg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2vrp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y256")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjv0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlbhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lffh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1fd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_etth0")
}],
"loop": true,
"name": &"d_bucket",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_msnqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6aeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0nw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n7be")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5ite")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4fuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c70xu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj2pr")
}],
"loop": true,
"name": &"d_bucket_evil",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nlmh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wquat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bawbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7y1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqjoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opq03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj82g")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gohnt"]
size = Vector2(92.2698, 96)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_wylnm"]
friction = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_xs4mw"]
atlas = ExtResource("6_35y2f")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_adlmk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xs4mw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Paint_char" type="CharacterBody2D"]
z_index = 3
collision_layer = 16
collision_mask = 5
script = ExtResource("1_67w2d")

[node name="Paint" type="Area2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Paint"]
position = Vector2(2, 5)
sprite_frames = SubResource("SpriteFrames_j5yrg")
animation = &"d_bucket_evil"
autoplay = "d_bucket"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paint"]
position = Vector2(0.5, -2)
scale = Vector2(0.387507, 0.921146)
shape = SubResource("RectangleShape2D_gohnt")

[node name="output" type="Timer" parent="Paint"]
wait_time = 1.001
one_shot = true

[node name="left_paint" type="Area2D" parent="Paint"]
collision_layer = 16
collision_mask = 16

[node name="paint_col_left" type="CollisionShape2D" parent="Paint/left_paint"]
position = Vector2(-30, 22)
scale = Vector2(0.36, 0.5)
shape = SubResource("RectangleShape2D_gohnt")

[node name="right_paint" type="Area2D" parent="Paint"]

[node name="paint_col_right" type="CollisionShape2D" parent="Paint/right_paint"]
position = Vector2(31, 22)
scale = Vector2(0.36, 0.5)
shape = SubResource("RectangleShape2D_gohnt")

[node name="pivot" type="Node2D" parent="Paint"]

[node name="paint_stuff" type="Marker2D" parent="Paint/pivot"]
position = Vector2(0, -59)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -2)
scale = Vector2(0.387507, 0.921146)
shape = SubResource("RectangleShape2D_gohnt")

[node name="One_way_collision" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 5
physics_material_override = SubResource("PhysicsMaterial_wylnm")
script = ExtResource("3_fva2p")

[node name="One_way_collision_col" type="CollisionShape2D" parent="One_way_collision"]
position = Vector2(-1.43051e-06, -41)
scale = Vector2(1.0621, 0.272705)
shape = SubResource("RectangleShape2D_gohnt")
one_way_collision = true

[node name="flowa" type="AnimatedSprite2D" parent="."]
position = Vector2(6, 5)
sprite_frames = SubResource("SpriteFrames_adlmk")

[connection signal="timeout" from="Paint/output" to="." method="_on_output_timeout"]
[connection signal="body_entered" from="Paint/left_paint" to="." method="_on_left_body_entered"]
[connection signal="body_exited" from="Paint/left_paint" to="." method="_on_left_body_exited"]
[connection signal="body_entered" from="Paint/right_paint" to="." method="_on_right_body_entered"]
[connection signal="body_exited" from="Paint/right_paint" to="." method="_on_right_body_exited"]
